updated readme file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-Click anywhere on the page to see the magic.
+Click anywhere on the page to see the magic :)
 
 </body>
 </html>
